--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,14 +27,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.2.1
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
   dio: 4.0.6
   flutter:
     sdk: flutter
+  flutter_cache_manager: ^3.3.0
   flutter_snake_navigationbar: ^0.6.1
   get: 4.5.1
   google_fonts: 3.0.1
+  loadmore: ^2.0.1
+  skeletons: ^0.0.3
   stylish_bottom_bar: ^0.1.3
 
 dev_dependencies:
