--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: 3.0.1
   loadmore: ^2.0.1
   skeletons: ^0.0.3
+  sticky_headers: ^0.3.0+2
   stylish_bottom_bar: ^0.1.3
 
 dev_dependencies:
